--- a/packages/design-system/src/components/Select/Select.module.css
+++ b/packages/design-system/src/components/Select/Select.module.css
@@ -20,10 +20,10 @@
   border-color: var(--color-neutral-400);
 }
 
-.select:focus {
-  outline: none;
+.select:focus-visible {
+  outline: 2px solid var(--color-primary-500);
+  outline-offset: 2px;
   border-color: var(--color-primary-500);
-  box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
 }
 
 .select:disabled {
@@ -36,9 +36,10 @@
   border-color: var(--color-error-500);
 }
 
-.select.error:focus {
+.select.error:focus-visible {
+  outline: 2px solid var(--color-error-600);
+  outline-offset: 2px;
   border-color: var(--color-error-600);
-  box-shadow: 0 0 0 3px rgba(239, 68, 68, 0.1);
 }
 
 .selectWrapper {
