--- a/packages/design-system/src/components/Switch/Switch.module.css
+++ b/packages/design-system/src/components/Switch/Switch.module.css
@@ -26,9 +26,9 @@
   background-color: var(--color-neutral-400);
 }
 
-.switch:focus {
-  outline: none;
-  box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+.switch:focus-visible {
+  outline: 2px solid var(--color-primary-500);
+  outline-offset: 2px;
 }
 
 .switch:checked {
